# TurnTableKnob

./: .gitignore  CMakeLists.txt  README.md
resource/: editor.uidesc
source/: audiosegment32.cpp  audiosegment32.h  cdrawcontextextensions.h  cids.h  consts.h  controller.cpp  controller.h  declicker.cpp  declicker.h  entry.cpp  itimelinecontrolprocessor.h  lerpfollowparameter.cpp  lerpfollowparameter.h  mydebug.h  processor.cpp  processor.h  smoothfollowparameter.cpp  smoothfollowparameter.h  timelinecontrol.cpp  timelinecontrol.h  timelinecontrolfactory.cpp  timelinecontrolfactory.h  version.h
source/audiofile/: audiosegment32.cpp
source/processing/: declicker.cpp  declicker.h  smoothfollowparameter.cpp  smoothfollowparameter.h
source/uicontrols/: autoplaycontrol.cpp  autoplaycontrol.h  autoplaycontrolfactory.cpp  autoplaycontrolfactory.h  cdrawcontextextensions.h  holdcontrol.cpp  holdcontrol.h  itimelinecontrolprocessor.h  timelinecontrol.cpp  timelinecontrol.h  timelinecontrolfactory.cpp  timelinecontrolfactory.h
